# paperless-chandra

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml  smoke.yml
docker/: builder.Dockerfile  e2e.Dockerfile
docs/superpowers/plans/: 2026-07-12-paperless-chandra.md
docs/superpowers/specs/: 2026-07-12-paperless-chandra-design.md
examples/: Dockerfile  docker-compose.vllm.yml
paperless_chandra/: __init__.py  ocrmypdf_plugin.py  parser.py
paperless_chandra/engine/: __init__.py  blocks.py  client.py  deskew.py  engine.py  geometry.py  hocr.py  osd.py  pdf.py
tests/: smoke_paperless.py  test_blocks.py  test_client.py  test_deskew.py  test_engine.py  test_geometry.py  test_hocr.py  test_osd.py  test_pdf_render.py  test_plugin_options.py
tests/e2e/: assert_e2e.py  docker-compose.llamacpp.yml  docker-compose.stub.yml  download-model.sh  make_test_page.py  run-llamacpp.sh  run-stub.sh  stub_chandra.py
