[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperless-chandra"
version = "0.1.0"
description = "Chandra OCR provider for paperless-ngx"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Florian Bernd", email = "git@flobernd.de"},
]
keywords = ["paperless", "paperless-ngx", "chandra", "ocr", "ocrmypdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    # NB: no "License ::" classifiers - PEP 639 / setuptools>=77 require the
    # SPDX `license` expression above to be the single source of truth and
    # reject the two from coexisting.
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "ocrmypdf>=17.4",
    "chandra-ocr>=0.2",
    "beautifulsoup4>=4.12",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/flobernd/paperless-chandra"
Issues = "https://github.com/flobernd/paperless-chandra/issues"

[project.entry-points."paperless_ngx.parsers"]
chandra = "paperless_chandra.parser:PaperlessChandraParser"

[tool.setuptools.packages.find]
include = ["paperless_chandra*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
strict_equality = true
